# AI-Brains

./: .gitignore  AGENTS.md  COMMERCIAL-EXCEPTION.md  CONTEXT.md  Cargo.toml  README.md  clippy.toml  deny.toml  nextest.toml  rust-toolchain.toml  rustfmt.toml
.agents/rules/: core-mandates.md
.hermes/plans/: 2026-07-23_204630-memory-control-plane-successor.md
Docs/: ARCHITECTURE.md  CAPABILITIES.md  Claude-Hooks-Research.md  Codex-Hooks-Research.md  Deviations.md  FTS5-catch.md  GeminiCLI-Hooks-Research.md  Implementation-Plan.md  MEMORY-CONTROL-PLANE-VISION.md  OPERATIONS.md  Opencode-Hooks-Research.md  PRD.md  WORKFLOWS.md  antigravity-rule.md  audit2.md  ci-tooling.md  hooks-status.md  status.md
Docs/DECISIONS/: ADR-0010-evolve-ai-brains-into-successor.md  ADR-0011-separate-evidence-conclusions-decisions.md  ADR-0012-local-first-control-plane-and-public-protocol.md  ADR-0013-distinct-briefings-and-scope-hierarchy.md  (+2 more)
conductor/: conductor.md  deferred.md  failure-drills.md
crates/ai-brains-brain/: Cargo.toml
crates/ai-brains-brain/src/: backup.rs  conflict_detection.rs  intervention.rs  lib.rs  memory_synthesis.rs  recipe_promotion.rs  retention.rs
crates/ai-brains-brain/tests/: conflicts_and_recipes.rs  cross_agent_synthesis.rs  nightly_consecutive_errors.rs  nightly_summarizes_large_session.rs  nightly_summarizes_session.rs  raptor_synthesis.rs  retention_and_forget.rs
crates/ai-brains-contracts/: Cargo.toml
crates/ai-brains-contracts/src/: backup.rs  bridge.rs  doctor.rs  hook.rs  ingest.rs  lib.rs  memory.rs  preflight.rs  projects.rs  recall.rs  response.rs  sessions.rs  version.rs
crates/ai-brains-contracts/tests/: api_response_shape.rs  bridge_record_shape.rs  contracts_are_backward_compatible.rs  hook_response_has_no_stdout_noise_fields.rs  ingest_request_shape.rs  preflight_response_shape.rs  structured_errors.rs
crates/ai-brains-core/: Cargo.toml
crates/ai-brains-core/src/: conflict.rs  device.rs  errors.rs  harness.rs  ids.rs  lib.rs  memory.rs  privacy.rs  project.rs  recipe.rs  session.rs  status.rs  temp_env.rs  turn.rs  user.rs  validation.rs
crates/ai-brains-core/tests/: domain_validation_rejects_empty_content.rs  id_serde_roundtrip.rs  no_thinking_role_exists.rs  privacy_strictest_wins.rs  session_status_transitions.rs
crates/ai-brains-crypto/: Cargo.toml
crates/ai-brains-crypto/src/: data_key.rs  dpapi.rs  errors.rs  key_wrap.rs  lib.rs  passphrase.rs  recovery_kit.rs  sqlcipher.rs  test_support.rs
crates/ai-brains-crypto/tests/: crypto_recovery.rs
crates/ai-brains-models/: Cargo.toml
crates/ai-brains-models/src/: lib.rs  llama_cpp.rs  mock.rs  ollama.rs  registry.rs
crates/ai-brains-models/tests/: llama_cpp_provider_timeout.rs  ollama_provider_returns_mocked_completion.rs  registry_respects_privacy_gate.rs
crates/ai-brains-scheduler/: Cargo.toml
crates/ai-brains-scheduler/src/: lib.rs
crates/ai-brains-store/: Cargo.toml
crates/ai-brains-store/migrations/: 0001_event_log.sql  0002_identity_projection.sql  0003_project_projection.sql  0004_session_projection.sql  0005_turn_projection.sql  0006_memory_projection.sql  0007_fts_setup.sql  0008_fts_triggers.sql  0009_session_summarization.sql  0010_conflict_recipe_projection.sql  0011_memory_hierarchy.sql  0012_retention_support.sql  0014_memory_session_context.sql  0016_provenance_tx_id.sql
crates/ai-brains-store/src/: config.rs  connection.rs  errors.rs  event_store.rs  fts.rs  lib.rs  migrations.rs  pragmas.rs  query_store.rs  replay.rs  transaction.rs
crates/ai-brains-store/src/projections/: conflict.rs  memory.rs  mod.rs  project.rs  recipe.rs  session.rs  turn.rs
crates/ai-brains-store/tests/: fts_indexes_memory.rs  governed_fixture_replay.rs  pragmas_busy_timeout.rs  projections_react_to_events.rs  projections_update_from_events.rs  replay_rebuilds_projections.rs
crates/ai-brains-store/tests/common/: governed_fixture.rs  mod.rs
crates/ai-brainsd/: Cargo.toml
crates/ai-brainsd/src/: instance_guard.rs  lib.rs  main.rs  pipe_error.rs  pipe_security.rs  windows_service.rs
crates/ai-brainsd/tests/: single_writer_serializes_parallel_ingest.rs  spool_replays_after_restart.rs
scratch/: check_vault.rs
scripts/: Build-AIBrains.ps1  ai-brains-plugin.ts  dev-check.ps1  nightly-task.bat  shadow-vault.ps1  target-claude-hook.ps1  target-codex-hook.ps1  target-gemini-hook.ps1  target-opencode-hook.ps1
tracks/: T20-graph-projection.md  T21-model-providers.md  T22-nightly-summaries.md  T23-conflicts-recipes.md  T25-scheduler-backups.md  T27-e2e-hardening.md  T28-cross-agent-harness.md
(+329 files in other folders)
