[package]
name = "ai-brains-contracts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
uuid = "1.0"
