[package]
name = "ai-brains-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
serde_json.workspace = true
