[package]
name = "ai-brains-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
subtle = "2.6"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
