[package]
name = "ai-brains-models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ai-brains-core = { path = "../ai-brains-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
